# apple-foundation-models-py

./: .agent_trail.yml  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  TOOL_CALLING.md  pyproject.toml  setup.py  test_structured.py
.github/workflows/: publish-to-pypi.yml  test.yml
applefoundationmodels/: __init__.py  _foundationmodels.pxd  _foundationmodels.pyi  _foundationmodels.pyx  async_client.py  async_session.py  base.py  base_client.py  base_session.py  client.py  error_codes.json  exceptions.py  pydantic_compat.py  session.py  tools.py  types.py
applefoundationmodels/swift/: error_codes.generated.swift  foundation_models.h  foundation_models.swift
examples/: basic_async_chat.py  basic_chat.py  streaming_chat.py  structured_output.py  tool_calling_comprehensive.py  utils.py
foundationmodels/: __init__.py  _foundationmodels.pxd  client.py  exceptions.py  session.py
libai/: __init__.py  _libai.pxd  _libai.pyx  client.py  exceptions.py  session.py
libai/swift/: apple_ai.swift
scripts/: build_swift.sh  download_libs.sh
tests/: README.md  conftest.py  test_client.py  test_exceptions.py  test_integration.py  test_session.py  test_session_lifecycle.py  test_tools.py
